--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,4 +1,21 @@
-.pie-chart {
+.warp {
   width: 100%;
   height: 100vh;
+  padding: 20px;
+}
+
+.picker {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  font-size: 35px;
+  line-height: 60px;
+  background-color: #ffffff;
+}
+
+.pie-chart {
+  width: 100%;
+  height: 700px;
 }
